--- a/404.html
+++ b/404.html
@@ -83,13 +83,13 @@
 <nav id="mobile-menu" class="mobile-menu slideout-menu">
   <ul class="mobile-menu-list">
     <a href="/">
-        <li class="mobile-menu-item">首页</li>
+        <li class="mobile-menu-item">Home</li>
       </a><a href="/post/">
-        <li class="mobile-menu-item">档案</li>
+        <li class="mobile-menu-item">Archives</li>
       </a><a href="/tags/">
-        <li class="mobile-menu-item">标签</li>
+        <li class="mobile-menu-item">Tags</li>
       </a><a href="/categories/">
-        <li class="mobile-menu-item">分类</li>
+        <li class="mobile-menu-item">Categories</li>
       </a>
   </ul>
 </nav>
@@ -102,13 +102,13 @@
 <nav class="site-navbar">
   <ul id="menu" class="menu">
     <li class="menu-item">
-        <a class="menu-item-link" href="/">首页</a>
+        <a class="menu-item-link" href="/">Home</a>
       </li><li class="menu-item">
-        <a class="menu-item-link" href="/post/">档案</a>
+        <a class="menu-item-link" href="/post/">Archives</a>
       </li><li class="menu-item">
-        <a class="menu-item-link" href="/tags/">标签</a>
+        <a class="menu-item-link" href="/tags/">Tags</a>
       </li><li class="menu-item">
-        <a class="menu-item-link" href="/categories/">分类</a>
+        <a class="menu-item-link" href="/categories/">Categories</a>
       </li>
   </ul>
 </nav>
